--- a/openy_lily/sass/misc/_camps-locations.scss
+++ b/openy_lily/sass/misc/_camps-locations.scss
@@ -7,7 +7,7 @@
   .camp-menu-wrapper {
     padding: 0 30px;
     background: #383838;
-    z-index: 5;
+    z-index:8;
     .columns-gradient {
       background: #383838;
       &:before {
